# PyDiffWatch

./: .gitignore  CLAUDE.md  GETTING-STARTED.md  HOWTO.md  LICENSE  README.md  RULES.md  pyproject.toml
docs/hardening/: egress-allowlist.md  parse-sandbox.md
examples/: anthropic.toml  deepseek.toml  llamacpp.toml  local-qwen.toml  ollama.toml  openai.toml
pydiffwatch/: __main__.py  backends.py  config.py  dashboard.py  deps.py  differ.py  egress.py  engine.py  facts.py  fetcher.py  ingest.py  models.py  notifier.py  orchestrator.py  quarantine.py  reviewer.py  rules.py  store.py
pydiffwatch/data/: top_pypi_names.txt
rules/community/: binaries.yaml  combos.yaml  deps.yaml  maintainer.yaml  primitives.yaml
tests/: conftest.py  test_adjudication.py  test_backends.py  test_concurrency.py  test_config.py  test_containment_reviewer.py  test_dashboard.py  test_deps.py  test_differ.py  test_e2e.py  test_egress.py  test_engine.py  test_evidence.py  test_facts.py  test_fetcher.py  test_ingest.py  test_models_smoke.py  test_notifier.py  test_orchestrator_reviewer.py  test_quarantine.py  test_reviewer.py  test_reviewer_cover_story.py  test_reviewer_injection.py  test_rules.py  test_seed.py  test_shipped_rules.py  test_smoke.py  test_store.py
tests/fixtures/: build_fixtures.py
