[project]
name = "pydiffwatch"
version = "0.1.0"
description = "Rules-driven PyPI supply-chain malware scanner (open-source PyDiffWatch)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OffByQuant" }]
dependencies = ["PyYAML>=6.0", "defusedxml>=0.7"]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
pydiffwatch = "pydiffwatch.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["pydiffwatch*"]

[tool.setuptools.package-data]
pydiffwatch = ["data/*.txt"]
